--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,3 +41,13 @@ $border-distances: 4, 5, 6, 8, 10;
 		border-radius: #{$val}px;
 	}
 }
+
+.three-box-ct {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+	.three-box {
+		flex: 1;
+	}
+}
